fix textalign

--- a/index.css
+++ b/index.css
@@ -361,8 +361,8 @@ input::-webkit-inner-spin-button {
   margin-bottom: 16px;
   text-align: center;
 }
-@media screen and (min-witdh:768px){
-  .aboutUs-title{
+@media screen and (min-witdh: 768px) {
+  .aboutUs-title {
     font-size: 40px;
     line-height: 48px;
   }
@@ -373,14 +373,12 @@ input::-webkit-inner-spin-button {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
+  text-align: center;
 }
-@media screen and (min-witdh:768px){
-  .aboutUs-description
-  {
-    
+@media screen and (min-witdh: 768px) {
+  .aboutUs-description {
     font-size: 18px;
     line-height: 18px;
-    
   }
 }
 
@@ -425,11 +423,10 @@ input::-webkit-inner-spin-button {
   gap: 32px;
   margin-top: 40px;
 }
-@media screen  and (min-width:768px){
-  .cards-wrap{
+@media screen and (min-width: 768px) {
+  .cards-wrap {
     margin-top: 64px;
   }
-  
 }
 
 .aboutUs-list {
